<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="50dp">

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nome"
        app:layout_constraintStart_toStartOf="@+id/et_idade"
        app:layout_constraintTop_toTopOf="@+id/tv_nome" />

    <TextView
        android:id="@+id/tv_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nome" />

    <EditText
        android:id="@+id/et_idade"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:inputType="number"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_idade"
        app:layout_constraintStart_toEndOf="@+id/tv_idade"
        app:layout_constraintTop_toTopOf="@+id/tv_idade" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_idade"
        app:layout_constraintTop_toBottomOf="@+id/et_idade">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthDate"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/et_birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birth"
        android:inputType="date"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_birthDate"
        app:layout_constraintStart_toEndOf="@+id/tv_birthDate"
        app:layout_constraintTop_toTopOf="@+id/tv_birthDate" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birthDate" />

</androidx.constraintlayout.widget.ConstraintLayout>