<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="50dp">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="150dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintBottom_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/et_senha"
        app:layout_constraintTop_toTopOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_senha"
        app:layout_constraintStart_toEndOf="@+id/tv_senha"
        app:layout_constraintTop_toTopOf="@+id/tv_senha" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>