<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Event App"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

    <Spinner
        android:id="@+id/userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:entries="@array/array_user"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_type"
        app:layout_constraintStart_toEndOf="@+id/tv_user_type"
        app:layout_constraintTop_toTopOf="@+id/tv_user_type" />

    <TextView
        android:id="@+id/tv_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/notif"
        app:layout_constraintStart_toStartOf="@+id/tv_user_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_type" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notifications"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notif"
        app:layout_constraintStart_toEndOf="@+id/tv_notif"
        app:layout_constraintTop_toTopOf="@+id/tv_notif"
        />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_participant"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notif" />

    <TextView
        android:id="@+id/tv_list_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_part"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/tv_notif"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_part"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_part"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>